--- a/PainelCipa/PainelCipa.csproj
+++ b/PainelCipa/PainelCipa.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190920200117_WorkingWIthVotes.cs" />
+    <Compile Remove="Migrations\20190920200117_WorkingWIthVotes.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
@@ -13,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ViewModel\" />
     <Folder Include="wwwroot\images\candidates\" />
   </ItemGroup>
 
