remove unused files and sensitive data

--- a/PainelCipa/appsettings.json
+++ b/PainelCipa/appsettings.json
@@ -2,7 +2,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"PainelCipaContext": "Server=(localdb)\\mssqllocaldb;Database=PainelCipaContext-2d13dcfb-468c-4d67-9860-586b9f3a8c19;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "PainelCipaContext": "server=192.168.30.151;userid=cipauser;password=u2fixAPzIB9ybg61PGIi;database=eleicoes_cipa"
+    "PainelCipaContext": "server=localhost;userid=cipauser;password=uiuiai;database=eleicoes_cipa"
 
   },
   "Logging": {
