--- a/ClientVotacao/App.config
+++ b/ClientVotacao/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="ClientVotacaoContext" connectionString="server=192.168.30.151;userid=cipauser;password=u2fixAPzIB9ybg61PGIi;database=eleicoes_cipa" providerName="MySql.Data.MySqlClient" />
+    <add name="ClientVotacaoContext" connectionString="server=localhost;userid=cipauser;password=uiuiai;database=eleicoes_cipa" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="MySql.Data.Entity.MySqlConnectionFactory, EntityFramework"></defaultConnectionFactory>
